[tool.poetry]
name = "overclocker"
version = "0.1.0"
description = "Overclocking Download link scraper"
authors = ["CannedKilroy <GenericArt@protonmail.com>"]
readme = "README.md"
packages = [
    {include="overclocker", from="src"}
]
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
